--- a/Chelsea.html
+++ b/Chelsea.html
@@ -34,9 +34,7 @@
                 </figure>
                 <h1 id="introdução">Introdução</h1>
  
-        <p>Você, que quer jogar com o Chelsea no seu modo carreira, sem contratar níguem como na vida real, esse blog
-                mostrará como ter as melhores táticas e escalações para jogar e levar pelo menos uma taça na primeira
-                temporada.</p>
+        <p>Você, que quer jogar com o Chelsea no seu modo carreira, sem contratar níguem como na vida real, poderá ver nesse blog as melhores opções para se sair bem no Chelsea</p>
 
         <p><a href="Untitled-1.html" target="_blank">
                         <h3>Faça o login em nosso blog para mais dicas!</h3>
